force-app/main/default/objects/nepa_litigation__c/fields/nepa_data_source_agency__c.field-meta.xml
<CustomField>
<fullName>nepa_data_source_agency__c</fullName>
        <description>The agency or organization that published or owns the source data. CEQ Standard v1.2 provenance field 3 of 5.</description>
        <inlineHelpText>Agency that owns the source data (e.g., PNNL for PermitTEC corpus).</inlineHelpText>
        <label>Data Source Agency</label>
        <length>255</length>
        <type>Text</type>
</CustomField>