force-app/main/default/objects/nepa_litigation__c/fields/nepa_record_owner_agency__c.field-meta.xml
<CustomField>
<fullName>nepa_record_owner_agency__c</fullName>
        <description>The agency responsible for maintaining this record in the NEPA system of record. CEQ Standard v1.2 provenance field 4 of 5.</description>
        <inlineHelpText>Agency responsible for maintaining this record.</inlineHelpText>
        <label>Record Owner Agency</label>
        <length>255</length>
        <type>Text</type>
</CustomField>