force-app/main/default/objects/nepa_litigation__c/fields/nepa_retrieved_timestamp__c.field-meta.xml
<CustomField>
<fullName>nepa_retrieved_timestamp__c</fullName>
        <description>The date and time this record was retrieved or ingested from the source system. CEQ Standard v1.2 provenance field 5 of 5.</description>
        <inlineHelpText>Timestamp when this record was retrieved from the source system.</inlineHelpText>
        <label>Retrieved Timestamp</label>
        <type>DateTime</type>
</CustomField>